--- a/jitter-free-membership.tex
+++ b/jitter-free-membership.tex
@@ -876,14 +876,17 @@ infrastructure such as power or network connectivity, and a failure of this
 infrastructure would cause a simultaneous failure of all the dependent nodes.
 To control this sitation, the cluster may be divided into \textit{zones}, where
 the nodes within a single zone may share infrastructure but failures in
-different zones can be considered to be independent.  The four-node approach
-described above is only safe if each node is in a different zone: if any two of
-them are in the same zone then system will fail if there is a zone-wide failure
-in epoch $w_{e+1}$.  In many operating environments it may be expensive or
-complicated to arrange for four independent zones\footnote{For instance, at
-time of writing, only one Amazon Web Services region (\texttt{us-east-1}) has
-four independent zones, whereas four of them have three:
-\texttt{ap-southeast-2}, \texttt{eu-west-1}, \texttt{sa-east-1} and
+different zones can be considered to be independent. For the system to be
+resilient to simultaneous zone-wide failures of $f_z > 0$ zones, it must have
+nodes running in at least $2f_z + 1 \ge 3$ zones.
+
+The four-node maintenance process described above is only safe if each node is
+in a different zone: if any two of them are in the same zone then system will
+fail if there is a zone-wide failure in epoch $w_{e+1}$.  In many operating
+environments it may be expensive or complicated to arrange for four independent
+zones\footnote{For instance, at time of writing, only one Amazon Web Services
+region (\texttt{us-east-1}) has four independent zones, whereas four of them
+have three: \texttt{ap-southeast-2}, \texttt{eu-west-1}, \texttt{sa-east-1} and
 \texttt{us-west-2}.}, particularly if the fourth zone is only required to
 ensure consistency in relatively rare periods of maintenance.  Fortunately, it
 is possible to safely replace a node within a single zone $z_{\textrm{maint}}$
