--- a/jitter-free-membership.tex
+++ b/jitter-free-membership.tex
@@ -1039,10 +1039,8 @@ invariants.
 \begin{enumerate}
 
 \item \label{synod-quorums} For every proposal identifier $p \in \mathbb P$
-there are sets of quorums $Q^\textrm{I}(p), Q^\textrm{II}(p) \subseteq \mathcal
-P \mathbb A$ such that $q^\textrm{I} \cap q^\textrm{II} \ne \varnothing$ for
-all $q^\textrm{I} \in Q^\textrm{I}(p)$ and $q^\textrm{II} \in
-Q^\textrm{II}(p)$.
+there are sets of quorums $Q^\textrm{I}(p), Q^\textrm{II}(p) \subseteq
+\mathcal P \mathbb A$ such that $Q^\textrm{I}(p) \smile Q^\textrm{II}(p)$.
 
 \item \label{synod-fprom} $\fprom{}{a}{p}$ only if $\neg\acc{}{a}{p'}$ for all
 $p' \prec p$.
