--- a/jitter-free-membership.tex
+++ b/jitter-free-membership.tex
@@ -783,7 +783,7 @@ only takes finitely many nonzero values. This can be used to define a
 membership $M(w)$ by \textit{majority}: \[M(w) = \left\{ q \;\middle|\; \sum_{a
 \in q} 2 w(a) > \sum_{a \in \mathbb A} w(a) \right\}.\] If $w(a) = 0$ for all
 $a$ then $w$ is said to be \textit{weightless} and $M(w) = \varnothing$.
-Corollary \ref{weights-equal} shows that if $M(w) \smile M(w)$ for any weight
+Corollary \ref{weights-equal} shows that $M(w) \smile M(w)$ for any weight
 function $w$.
 
 A sequence $w_0, w_1, \ldots$ of weight functions can be used to define the
