--- a/jitter-free-membership.tex
+++ b/jitter-free-membership.tex
@@ -874,9 +874,14 @@ infrastructure such as power or network connectivity, and a failure of this
 infrastructure would cause a simultaneous failure of all the dependent nodes.
 To control this sitation, the cluster may be divided into \textit{zones}, where
 the nodes within a single zone may share infrastructure but failures in
-different zones can be considered to be independent. For the system to be
-resilient to simultaneous zone-wide failures of $f_z > 0$ zones, it must have
-nodes running in at least $2f_z + 1 \ge 3$ zones.
+different zones can be considered to be independent. In a traditional data
+centre environment, individual racks are often assumed to be independent, so
+each rack could be a separate zone. If geographical redundancy is required then
+the cluster will be separated across multiple data centres, each of which is an
+independent zone, and many cloud environments also divide their services into
+zones in this way.  For the system to be resilient to simultaneous zone-wide
+failures of $f_z > 0$ zones, it must have nodes running in at least $2f_z + 1
+\ge 3$ zones.
 
 The four-node maintenance process described above is only safe if each node is
 in a different zone: if any two of them are in the same zone then system will
@@ -885,10 +890,12 @@ environments it may be expensive or complicated to arrange for four independent
 zones\footnote{For instance, at time of writing, only one Amazon Web Services
 region (\texttt{us-east-1}) has four independent zones, whereas four of them
 have three: \texttt{ap-southeast-2}, \texttt{eu-west-1}, \texttt{sa-east-1} and
-\texttt{us-west-2}.}, particularly if the fourth zone is only required to
-ensure consistency in relatively rare periods of maintenance.  Fortunately, it
-is possible to safely replace a node within a single zone $z_{\textrm{maint}}$
-using only three zones and the following sequence of operations.
+\texttt{us-west-2}. Similarly, only one Google Cloud Platform region
+(\texttt{us-central1}) has four zones and all the others have three zones.},
+particularly if the fourth zone is only required to ensure consistency in
+relatively rare periods of maintenance.  Fortunately, it is possible to safely
+replace a node within a single zone $z_{\textrm{maint}}$ using only three zones
+and the following sequence of operations.
 \[\begin{array}{rcccc}
 \textrm{zone}&z_{\textrm{maint}}&z_{\textrm{maint}}&z_1&z_2\\
 \textrm{node}&a_{\textrm{old}}&a_{\textrm{new}}&a_1&a_2\\
